# covid19-santiago

./: .gitignore
code/: CMakeLists.txt  main.cpp
code/control_panel/: README.md  app.py  input.yaml  logger.py  runner.py  visual.ipynb
code/control_panel/assets/: style.css
code/hun_codes/: convert_script.py  data_discoveries.ipynb  eval.py  fit.py  generate_init.py  generate_log.py  run_code.py  stats.ipynb  temp.ipynb
code/hun_codes/scripts/: 2022.08.30.ipynb  cities.topojson  districts.json  plot_sims.ipynb  report1.ipynb  stats.ipynb
code/hun_codes/scripts/trash/: real_data.ipynb  reproduce_death_curve.ipynb  temp.ipynb
code/include/: Parser.h  sampler.cpp
code/input/hun/: commuting_KSH.json  config.json  config_KSH.json  contacts_home.json  contacts_other.json  contacts_other0.json  contacts_other1.json  contacts_other2.json  contacts_other3.json  contacts_other4.json  hun_contact.csv  populations_KSH.json
code/input/santiago/: config.json
code/output/: results.txt
